[package]
name = "raytrace"
version = "0.1.0"
authors = ["Alex Komissarov <k.a.komissar@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.8.4", features = ["small_rng", "simd_support"] }
rayon = "1.5.1"
lazy_static = "1.4.0"
image = "0.23.8"

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "scene"
harness = false

[profile.release]
codegen-units = 1
